src/scss/blocks/_header.scss
.header {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 45px 0 25px;
    background-color: #fff;

    &__logo {
        display: flex;
        align-items: center;
        width: fit-content;
        color: $black;
        font-size: 2.7rem;
        font-weight: 600;
        text-decoration: none;
    }

    &__logo-image {
        display: block;
        max-width: 45px;
        max-height: 45px;
        object-fit: cover;
        margin-right: 25px;
    }

    &__menu {
        list-style-type: none;
    }

    &__menu-item {
        margin-bottom: 45px;

        &:last-child {
            margin-bottom: 0;
        }
    }

    &__menu-link {
        position: relative;
        display: flex;
        align-items: center;
        padding: 7px 0;
        color: $text-blue;
        font-size: 1.7rem;
        font-weight: 500;
        text-decoration: none;
        transition: color 0.2s ease-in-out;

        &::after {
            content: "";
            position: absolute;
            top: 0;
            right: -1px;
            display: none;
            width: 3px;
            height: 100%;
            border-radius: 10px;
            background-color: $blue;
        }

        &--active,
        &:hover,
        &:focus-visible {
            color: $black;

            .header__menu-icon {
                fill: $blue;
            }
        }

        &:focus-visible {
            outline: none;
        }

        &--active {
            &::after {
                display: block;
            }
        }
    }

    &__menu-icon {
        width: 24px;
        height: 24px;
        margin-right: 40px;
        fill: $text-blue;
        transition: fill 0.2s ease-in-out;
    }

    &__offer {
        position: relative;
        max-width: 220px;
        padding: 83px 27px 27px;
        border-radius: 17px;
        background-color: #f5f5fb;
    }

    &__offer-image {
        position: absolute;
        top: -15%;
        left: 50%;
        transform: translateX(-50%);
        display: block;
        max-width: 105px;
        height: auto;
        object-fit: cover;
    }

    &__offer-text {
        color: $text-blue;
        font-size: 1.6rem;
        line-height: 2.4rem;
        text-align: center;
    }

    &__offer-strong {
        color: $black;
        font-weight: 600;
        text-transform: uppercase;
    }

    &__offer-link {
        display: block;
        margin-top: 35px;
        padding: 15px 0;
        border-radius: 14px;
        background-color: $blue;
        color: $text-white;
        font-size: 1.7rem;
        font-weight: 500;
        text-align: center;
        text-decoration: none;
        transition: background-color 0.2s ease-in-out;

        &:hover,
        &:focus-visible {
            outline: none;
            background-color: $blue-transparent;
        }
    }
}

